Scrape in chunks, and include article id

--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -8,6 +8,9 @@
     "\n",
     "This notebook contains code to scrape The New York Times.\n",
     "\n",
+    "Caveats:\n",
+    "- Some articles in The New York Times are still in their Time Machine and do not have a transcribed copy available. Only their headlines are available. If their headlines happen to contain a deaf-related phrase, my code will include only the headline, and not the body. But if their headlines do not contain a deaf-related phrase, and their body does, my code unfortunately will miss them entirely. \n",
+    "\n",
     "Load dependencies and data."
    ]
   },
@@ -524,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +576,7 @@
     "    \n",
     "    \n",
     "def scrape(article):\n",
-    "    time.sleep(4)\n",
+    "    time.sleep(2)\n",
     "    article_id = article['id']\n",
     "    url = article['url']\n",
     "    status = None\n",
@@ -615,7 +618,7 @@
     "            matches = None\n",
     "            print(status) # failed\n",
     "            \n",
-    "    return status, matches"
+    "    return article_id, status, matches"
    ]
   },
   {
@@ -628,25 +631,15 @@
     "\n",
     "`statuses` is a 1D list with the scrape status for each article:\n",
     "- `Page Not Found` — if the page was not found\n",
-    "- \n",
-    "\n",
-    "Each row will contain either of 3 values:\n",
-    "- \n",
-    "- `server error` — if there was a server error\n",
-    "- `time machine` — if there is no fulltext available, and the article needs to be viewed through Time Machine\n",
-    "- `[]` - array of sentence(s)\n",
-    "\n",
-    "\n",
-    "    statuses = ['Full text is unavailable for this digitized archive article.',\n",
-    "              'Page Not Found',\n",
-    "              'Server Error',\n",
-    "              'Success',\n",
-    "              'Failed']"
+    "- `Full text is unavailable for this digitized archive article.` — if there is no fulltext available, and the article needs to be viewed through Time Machine\n",
+    "- `Server Errror` — if there was a server error on NYT's side\n",
+    "- `Success` \n",
+    "- `Failed` — if the page was fine, but my logic failed to find a matching sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -664,21 +657,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Server Error\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 4 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 3 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 2 sentence(s) found.\n",
+      "Success: 15 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 6 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 2 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 26 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
       "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
       "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Full text is unavailable for this digitized archive article.: 1 sentence(s) found.\n",
       "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n"
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 1 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n",
+      "Success: 2 sentence(s) found.\n"
      ]
     }
    ],
    "source": [
-    "statuses, sentences = zip(*data.iloc[0:10].apply(scrape, axis=1))"
+    "# Note: I saved the pandas dataframe with only 10 results to get the header in there, work has been deleted\n",
+    "\n",
+    "def chunker(df, size):\n",
+    "    return (df[pos:pos + size] for pos in range(0, len(df), size))\n",
+    "\n",
+    "already_scraped = pd.read_csv('data/sentences.csv')\n",
+    "not_yet_scraped = data[~data['id'].isin(sentences_already_scraped['id'])]\n",
+    "article_iterator = chunker(not_yet_scraped, 10)\n",
+    "\n",
+    "for chunk in article_iterator:\n",
+    "    ids, statuses, sentences = zip(*chunk.apply(scrape, axis=1))\n",
+    "    pd.DataFrame({'id': ids, 'status': statuses, 'sentences': sentences}).to_csv('data/sentences.csv', mode='a', header=False)"
    ]
   },
   {
@@ -688,73 +777,6 @@
     "**To do:**\n",
     "- For the articles that are unavailable as fulltexts, I can collect their URLs based on sentences==None then maybe automatically direct browser to the TimeMachine, then I will manually read it then [type the sentence into Jupyter Notebook using user input](https://stackoverflow.com/questions/34968112/how-to-give-jupyter-cell-standard-input-in-python) and then the program will add this to sentences cell for that article row, move on to the next row that needs it, then redirect browser automatically, and so on. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 254,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Full text is unavailable for this digitized archive article.',\n",
-       " 'Success',\n",
-       " 'Success',\n",
-       " 'Success',\n",
-       " 'Success',\n",
-       " 'Full text is unavailable for this digitized archive article.',\n",
-       " 'Full text is unavailable for this digitized archive article.',\n",
-       " 'Full text is unavailable for this digitized archive article.',\n",
-       " 'Success',\n",
-       " 'Success')"
-      ]
-     },
-     "execution_count": 254,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "statuses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['THE DEAF AND DUMB WAITER.'],\n",
-       " ['\"The international community has been totally deaf and dumb on the situation between Sudan and Chad,\" Mr. Deby said, declaring that \"enough is enough.\"'],\n",
-       " [\"'Like I Am in a Coffin' Her first husband, Ms. Bruce said, left her when the doctor announced their son was deaf and dumb.\"],\n",
-       " ['\"You\\'d have to be blind, deaf and dumb to not have known that oil prices went up,\" said Bernard Sosnick, a retail analyst at Oppenheimer & Company.'],\n",
-       " ['“We could be deaf, dumb and blind within seconds,” Mr. Cooper, who sits on the House Armed Services Committee with Mr. Rogers, said in February at a space forum at the Center for Strategic and International Studies.'],\n",
-       " ['NEW-YORK CITY.; Union of the Liberal Societies. Midnight Robberies in the Park. Fire and Rowdyism. The Deaf and Dumb. THE COURTS. DISPENSARY REPORTS. DETERMINED EFFORTS TO COMMIT SUICIDE AT COUP DE SOLIEL. CENSUS OF HOBOKEN.'],\n",
-       " ['Deaf and Dumb at Intervals.'],\n",
-       " ['Singular Calamity Two Men Made Deaf and Dumb.'],\n",
-       " [\"He struggled to raise himself to his feet; he undermined John Gray's already tottering reason with a succession of graceful but complex signs drawn from the deaf and dumb language; then he began to rail at Gray, in a peculiarly barbarous foreign tongue for idling there and looking stupid when he ought to be bestirring himself and giving all the help he could to an unfortunate stranger.\"],\n",
-       " [\"I wouldn't say they were universally gloomy, but I did detect something I hadn't detected before: a real undertow of concern that America is losing its competitive edge vis-à-vis China, India, Japan and other Asian tigers, and that the Bush team is deaf, dumb and blind to this situation.\"])"
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
