Change scraper to get paragraphs instead of sentences

--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "['../../config.ini']"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -432,7 +432,7 @@
        "[17345 rows x 18 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -481,7 +481,7 @@
        " 'deaf': ['deaf']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,35 +556,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_page_text():\n",
+    "def get_paragraphs():\n",
+    "    '''Returns a list of the paragraphs on the page.'''\n",
     "    paragraphs = browser.find_elements_by_tag_name('p')\n",
-    "    text = ''\n",
+    "    text = []\n",
     "    try:\n",
     "        if '/video/' in browser.current_url:\n",
-    "            print('Page contains a video')\n",
-    "            text = ' '.join([h2.text for h2 in browser.find_elements_by_tag_name('h2')])\n",
+    "            print('Page contains a video.')\n",
+    "            text = [h2.text for h2 in browser.find_elements_by_tag_name('h2')]\n",
     "        else:\n",
-    "            text = ' '.join([p.text for p in paragraphs])\n",
-    "        \n",
+    "            text = [p.text for p in paragraphs]\n",
     "    except StaleElementReferenceException:\n",
     "        print('StaleElementReferenceException')\n",
-    "        text = get_page_text()\n",
+    "        text = get_paragraphs()\n",
     "        \n",
     "    return text\n",
     "\n",
-    "        \n",
-    "def scrape_sentences(article):\n",
+    "\n",
+    "def scrape_matches(article, only_do_headline=False):\n",
     "    matches = []\n",
     "    \n",
-    "    # Get all sentences\n",
-    "    text = get_page_text()\n",
-    "    sentences = [x for x in tokenizer.tokenize(text)] # break into sentences\n",
-    "    sentences.append(article['headline']) # add headline to sentences\n",
-    "    sentences_cleaned = [' '.join(RegexpTokenizer(r'\\w+').tokenize(x)).lower() for x in sentences] # remove punctuation, lowercase\n",
+    "    # Get all paragraphs\n",
+    "    if not only_do_headline:    \n",
+    "        paragraphs = get_paragraphs()     \n",
+    "        paragraphs.append(article['headline']) # add headline to paragraphs\n",
+    "    else:\n",
+    "        paragraphs = [article['headline']]\n",
+    "    paragraphs_cleaned = [' '.join(RegexpTokenizer(r'\\w+').tokenize(p)).lower() for p in paragraphs] # remove punctuation, lowercase\n",
     "\n",
     "    # Get all varieties of the phrases for this article\n",
     "    phrases_for_this_article = phrases_for_each_article[article.name]\n",
@@ -594,10 +596,10 @@
     "\n",
     "    # Get sentences that contain a phrase variety\n",
     "    for p in phrase_varieties:\n",
-    "        matches += ([sentences[i] for i, x in enumerate(sentences_cleaned) if (p in x and sentences[i] not in matches)])\n",
-    "    \n",
+    "        matches += ([paragraphs[i] for i, x in enumerate(paragraphs_cleaned) if (p in x and paragraphs[i] not in matches)])\n",
+    "\n",
     "    return matches\n",
-    "    \n",
+    "\n",
     "    \n",
     "def scrape(article):\n",
     "    time.sleep(5)\n",
@@ -615,13 +617,18 @@
     "    # Navigate to page\n",
     "    browser.get(article['url'])\n",
     "    \n",
+    "    # If Error 503, refresh\n",
+    "    if \"Error 503 first byte timeout\" in browser.page_source:\n",
+    "        print('Error 503')\n",
+    "        browser.refresh()\n",
+    "    \n",
     "    # If video in URL\n",
     "    if '/video/' in article['url']:\n",
     "        status = statuses[3] # success\n",
-    "        matches = scrape_sentences(article) # scrape the article\n",
+    "        matches = scrape_matches(article) # scrape the article\n",
     "        if len(matches) >= 1: \n",
     "            status = statuses[3]\n",
-    "            print(status + ': ' + str(len(matches)) + ' sentence(s) found.') \n",
+    "            print(status + ': ' + str(len(matches)) + ' paragraph(s) found.') \n",
     "        else:\n",
     "            status = statuses[4]\n",
     "            matches = None\n",
@@ -629,27 +636,37 @@
     "    \n",
     "    elif statuses[0] in browser.page_source: # time machine\n",
     "        status = statuses[0]\n",
-    "        matches = scrape_sentences(article) # will only attempt to scrape headline\n",
+    "        matches = scrape_matches(article) # will only attempt to scrape headline\n",
     "        if len(matches) >= 1:\n",
-    "            print(status + ': ' + str(len(matches)) + ' sentence(s) found.') \n",
+    "            print(status + ': ' + str(len(matches)) + ' paragraph(s) found.') \n",
     "        else:\n",
     "            matches = None\n",
     "            print(status)\n",
     "            \n",
     "    elif statuses[1] in browser.page_source: \n",
     "        status = statuses[1] # page not found\n",
-    "        print(statuses[1])\n",
+    "        matches = scrape_matches(article, True)\n",
+    "        if len(matches) >= 1:\n",
+    "            print(status + ': ' + str(len(matches)) + ' paragraph(s) found.')\n",
+    "        else:\n",
+    "            matches = None\n",
+    "            print(status)\n",
     "    \n",
     "    elif statuses[2] in browser.page_source or statuses[5] in browser.page_source: \n",
     "        status = statuses[2] # server error\n",
-    "        print(statuses[2])\n",
+    "        matches = scrape_matches(article, True)\n",
+    "        if len(matches) >= 1:\n",
+    "            print(status + ': ' + str(len(matches)) + ' paragraph(s) found.')\n",
+    "        else:\n",
+    "            matches = None\n",
+    "            print(status)\n",
     "        \n",
     "    else:\n",
     "        status = statuses[3] # success\n",
-    "        matches = scrape_sentences(article) # scrape the article\n",
+    "        matches = scrape_matches(article) # scrape the article\n",
     "        if len(matches) >= 1: \n",
     "            status = statuses[3]\n",
-    "            print(status + ': ' + str(len(matches)) + ' sentence(s) found.') \n",
+    "            print(status + ': ' + str(len(matches)) + ' paragraph(s) found.') \n",
     "        else:\n",
     "            status = statuses[4]\n",
     "            matches = None\n",
@@ -676,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,87 +711,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed\n",
-      "Failed\n",
-      "Failed\n",
-      "Failed\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Updated data/sentences.csv\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Failed\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Server Error\n",
-      "Success: 1 sentence(s) found.\n",
-      "Server Error\n",
-      "Success: 1 sentence(s) found.\n",
-      "Page Not Found\n",
-      "Updated data/sentences.csv\n",
-      "Page Not Found\n",
-      "Failed\n",
-      "Page Not Found\n",
-      "Page Not Found\n",
-      "Page Not Found\n",
-      "Server Error\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Server Error\n",
-      "Updated data/sentences.csv\n",
-      "Server Error\n",
-      "Success: 1 sentence(s) found.\n",
-      "Page Not Found\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 14 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 3 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Updated data/sentences.csv\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Updated data/sentences.csv\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n",
-      "Failed\n",
-      "Success: 1 sentence(s) found.\n",
-      "Success: 1 sentence(s) found.\n"
+      "Success: 1 paragraph(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Full text is unavailable for this digitized archive article.: 1 paragraph(s) found.\n"
      ]
     }
    ],
    "source": [
-    "# Note: I saved the pandas dataframe with only 10 results to get the header in there, work has been deleted\n",
-    "# Note: If a video autoplays, I'll have to manually pause it for Selenium to resume\n",
-    "\n",
     "def chunker(df, size):\n",
     "    return (df[pos:pos + size] for pos in range(0, len(df), size))\n",
     "\n",
-    "already_scraped = pd.read_csv('data/sentences.csv')\n",
-    "not_yet_scraped = data[~data['id'].isin(already_scraped['id'])]\n",
+    "csv_path = 'data/paragraphs.csv'\n",
+    "if os.path.exists(csv_path):\n",
+    "    already_scraped = pd.read_csv('data/paragraphs.csv')\n",
+    "    not_yet_scraped = data[~data['id'].isin(already_scraped['id'])]\n",
+    "else:\n",
+    "    not_yet_scraped = data\n",
+    "    \n",
     "article_iterator = chunker(not_yet_scraped, 10)\n",
-    "csv_path = 'data/sentences.csv'\n",
     "\n",
     "for chunk in article_iterator:\n",
-    "    ids, statuses, sentences = zip(*chunk.apply(scrape, axis=1))\n",
-    "    already_scraped = already_scraped.append(pd.DataFrame({'id': ids, 'status': statuses, 'sentences': sentences})).reset_index(drop=True)\n",
-    "    already_scraped.to_csv(csv_path, index=False)\n",
+    "    ids, statuses, paragraphs = zip(*chunk.apply(scrape, axis=1))\n",
+    "    if not os.path.exists(csv_path):\n",
+    "        include_header = True\n",
+    "        mode = 'w'\n",
+    "    else: \n",
+    "        include_header = False\n",
+    "        mode = 'a'\n",
+    "        with open(csv_path, 'a') as f:\n",
+    "            f.write('\\n') # buggy if i don't do this, idk why, will concatenate 1st line on last line\n",
+    "    pd.DataFrame({'id': ids, 'status': statuses, 'sentences': paragraphs}).to_csv(csv_path, index=False, header=include_header, mode=mode)\n",
     "    print('Updated ' + csv_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -797,6 +773,36 @@
    "source": [
     "I will have to go back through the CSV to look at if the headline is included or not, for the sentences that have none. Becuase I didn't set page not found to do this, etc. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hi']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strings=[]\n",
+    "\n",
+    "strings.append('hi')\n",
+    "strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
