--- a/scrape_nyt.ipynb
+++ b/scrape_nyt.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "['../../config.ini']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +36,7 @@
     "import time\n",
     "import json\n",
     "import os\n",
+    "import math\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +586,10 @@
     "        paragraphs = get_paragraphs()     \n",
     "        paragraphs.append(article['headline']) # add headline to paragraphs\n",
     "    else:\n",
-    "        paragraphs = [article['headline']]\n",
+    "        if not isinstance(article['headline'], pd.Series) and math.isnan(article['headline']):\n",
+    "            return matches\n",
+    "        else:\n",
+    "            paragraphs = [article['headline']]\n",
     "    paragraphs_cleaned = [' '.join(RegexpTokenizer(r'\\w+').tokenize(p)).lower() for p in paragraphs] # remove punctuation, lowercase\n",
     "\n",
     "    # Get all varieties of the phrases for this article\n",
@@ -693,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,9 +716,138 @@
      "output_type": "stream",
      "text": [
       "Success: 1 paragraph(s) found.\n",
-      "Full text is unavailable for this digitized archive article.: 1 paragraph(s) found.\n",
       "Success: 1 paragraph(s) found.\n",
-      "Full text is unavailable for this digitized archive article.: 1 paragraph(s) found.\n"
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 2 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 3 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Success: 1 paragraph(s) found.\n",
+      "Updated data/paragraphs.csv\n",
+      "Success: 1 paragraph(s) found.\n"
      ]
     }
    ],
@@ -746,13 +879,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -761,40 +887,74 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Need to fix using page.source. Go back to using p's. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I will have to go back through the CSV to look at if the headline is included or not, for the sentences that have none. Becuase I didn't set page not found to do this, etc. "
+    "headline = data[data['url'] == 'https://www.nytimes.com/1998/06/22//IHT-william-at-16-prince-of-hearts-and-new-windsor-icon.html']['headline']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hi']"
+       "4308    William at 16: Prince of Hearts and New Windso...\n",
+       "Name: headline, dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "strings=[]\n",
-    "\n",
-    "strings.append('hi')\n",
-    "strings"
+    "list(headline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4308    William at 16: Prince of Hearts and New Windso...\n",
+       "Name: headline, dtype: object"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "headline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(headline, pd.Series)"
    ]
   },
   {
