Update phrase.txt filepaths, improve scraper

--- a/query_nyt_article_search_api.ipynb
+++ b/query_nyt_article_search_api.ipynb
@@ -257,7 +257,7 @@
     "           'deaf': deaf}\n",
     "\n",
     "# Save phrases to file\n",
-    "with open('phrases.txt', 'w') as outfile:\n",
+    "with open('data/phrases.txt', 'w') as outfile:\n",
     "    json.dump(queries, outfile)"
    ]
   },
